--- a/cliveserver.conf
+++ b/cliveserver.conf
@@ -2,18 +2,19 @@
     server_ip: "127.0.0.1", //local server run IP
     channels: [
      {
-       channel_name: "cnc_channel",
+       channel_name: "cnc",
        input_type: "ts", //flv, rtmp
        input_url: "tcp://127.0.0.1:9090",
-       output:[{output_type: "http+ts", output_url: "http://127.0.0.1:80/cnc_ts"}, 
-              {output_type: "http+flv", output_url: "http://127.0.0.1:80/cnc_flv"}]
+       output:["http://127.0.0.1:80/cnc_ts"}, 
+              "http://127.0.0.1:80/cnc_flv"]
       },
       {
-       channel_name: "tvb_channel",
+       channel_name: "tvb",
        input_type: "ts", //flv, rtmp
        input_url: "tcp://127.0.0.1:9090",
-       output:[{output_type: "http+ts", output_url: "http://127.0.0.1:80/tvb_ts"}, 
-              {output_type: "http+flv", output_url: "http://127.0.0.1:80/tvb_flv"}]
+       output:["http://127.0.0.1:80/tvb_ts", 
+              "http://127.0.0.1:80/tvb_flv",
+              "http://127.0.0.1:80/tvb.m3u8"]
       }
     
     ]
