run event wait in channel

--- a/src/cliveserver.conf
+++ b/src/cliveserver.conf
@@ -2,7 +2,7 @@
     channels: [
      {
        channel_name: "cnc",
-       input_url: "tcp://127.0.0.1:9090",
+       input_url: "udp://127.0.0.1:9090",
        output:["http://127.0.0.1:80/cnc_ts", 
               "http://127.0.0.1:80/cnc_flv"]
       },
